# agrisat

./: .gitignore  README.md  pyproject.toml
docker/: agent.env  api.env  compose.yml  initdb.sh  nginx.conf  pg_hba.conf  proxy.conf  web.env
docs/: environment.md  glossary.md  index.md  system-prompt.md  weather.md
notebooks/: cds_era5-land.ipynb  cdse_sentinel-2.ipynb
src/agrisat-agent/: .dockerignore  .env.example  Dockerfile  main.py  requirements.txt  settings.py
src/agrisat-agent/agrisat_agent/: agent.py  settings.py  tools.py
src/agrisat-api/: .env.example  Dockerfile  agent.py  dependencies.py  helpers.py  insights.py  main.py  requirements.txt  schema.sql  settings.py
src/agrisat-api/repository/: chat.py  environmental.py  layers.py  weather.py
src/agrisat-api/routes/: chat.py  environmental.py  insights.py  layers.py  satellite.py  weather.py
src/agrisat-web/: .cta.json  .dockerignore  .env.example  .oxfmtrc.json  .oxlintrc.json  Dockerfile  components.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo
src/agrisat-web/src/: styles.css
src/agrisat-web/src/components/: DashboardIntegration.test.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ErrorState.test.tsx  ErrorState.tsx  Header.tsx  StaleDataIndicator.test.tsx  StaleDataIndicator.tsx  ThemeToggle.tsx
src/agrisat-web/src/components/ai/: AIAssistantPanel.tsx  ChatModeTabs.tsx
src/agrisat-web/src/components/ai-elements/: conversation.tsx  suggestion.tsx  task.tsx
src/agrisat-web/src/components/layout/: AppLayout.tsx
src/agrisat-web/src/components/panels/: AnalysisPanel.test.tsx  AnalysisPanel.tsx  ControlsPanel.test.tsx  ControlsPanel.tsx  MapPanel.test.tsx  MapPanel.tsx  (+2 more)
src/agrisat-web/src/config/: navigation.ts
src/agrisat-web/src/hooks/: use-responsive-layout.test.ts  use-responsive-layout.ts  use-sidebar-state.test.ts  use-sidebar-state.ts  useAgentChat.ts  useComparison.ts  useEnvironmentalData.ts  useInsights.ts  useLayers.ts  useQueryErrorState.test.ts  useQueryErrorState.ts  useWeatherData.ts
src/agrisat-web/src/routes/: __root.tsx  index.tsx
src/agrisat-web/src/schemas/: api.test.ts  api.ts
src/agrisat-web/src/services/: agent.ts  api.ts
src/agrisat-web/src/stores/: query-context.test.ts  query-context.ts
src/agrisat-web/src/types/: api.ts  chat.ts  sidebar.ts
src/agrisat_agent/: agent.py  tools.py
src/notebooks/: chatbot.ipynb  data-import.ipynb  ecmwf_forecast.ipynb  vector-mask.ipynb
src/scripts/: data-raster.py  data-seed.py  data-sync.py  derive-rasters.py  download.py  run-all.sh  zonal-statistics.py
(+8 files in other folders)
