[project]
name = "agrisat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Data Sources
    "cql2>=0.5.5",
    "boto3>=1.42.92",
    "cdsapi>=0.7.7",
    "pystac-client>=0.9.0",
    "ecmwf-opendata>=0.3.26",
    # Data Manipulation
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "geopandas>=1.1.3",
    "pyarrow>=23.0.1",
    "netcdf4>=1.7.4",
    "rioxarray>=0.21.0",
    # Plotting
    "hvplot>=0.12.2",
    # LLM
    "openai>=2.32.0",
    # Utilities
    "rich>=15.0.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
